# learn-claude-code

./: .env.example  CLAUDE.md  README_MY.md  anthropic.py  pyproject.toml  requirements.txt  s01_agent_loop_openai.py
.team/: config.json
.worktrees/: events.jsonl  index.json
agents/: anthropic.py  login_openai_codex.py  s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_loading.py  s06_context_compact.py  s07_task_system.py  s08_background_tasks.py  s09_agent_teams.py  s10_team_protocols.py  s11_autonomous_agents.py  s12_worktree_task_isolation.py  s_full.py
demo/: anthropic接口.py  demo1.py  demo2.py  demo2.txt  demo3.py  lianliankan.html  openai接口.py  s01-summary.md  s02-summary.md  s03-summary.md
docs/zh/: s08-background-tasks.md
skills/test/: SKILL.md
web/: package.json
web/src/app/: layout.tsx
web/src/app/[locale]/: layout.tsx
