[project]
name = "learn-claude-code"
version = "0.1.0"
description = "Agent harness examples wired to OpenAI Codex OAuth."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
learn-claude-codex-login = "agents.login_openai_codex:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
include = ["anthropic.py"]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "ruff>=0.15.7",
]
